# golinks-rs

./: .gitignore  Cargo.toml  Rocket.toml  sqlx-data.json
db/: golinks.sqlite
db/migrations/: 20220517022739_create-golinks-table.sql
src/: cache.rs  db.rs  golink.rs  log.rs  main.rs  routes.rs  tracing.rs
