[package]
name = "golinks-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[dependencies.opentelemetry]
version = "0.17.0"
features = ["rt-tokio"]

[dependencies.opentelemetry-jaeger]
version = "0.16.0"
features = ["isahc_collector_client", "rt-tokio"]

[dependencies.tracing-opentelemetry]
version = "0.17.2"

[dependencies.tracing-subscriber]
version = "0.3.11"
features = ["env-filter", "json"]

[dependencies]
rand = "0.8"
fuse-rust = "0.3.0"
chrono = "0.4"
tracing = "0.1.34"
tracing-tree = "0.2.0"
url = "2.2.2"
